2007-08-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* HACKING
	* src/sapwood-proto.h (PixbufOpenRequest)
	* src/theme-pixbuf.h (ThemePixbuf): increase the size of the border
	variables from 8 to 16 bits to allow larger borders. (NB#63819)
	NOTE: this breaks the binary protocol between client and the server

2007-08-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-pixmap.c (SapwoodPixmap, sapwood_pixmap_get_for_file):
	remove redundant border_left and border_top members.

2007-07-04  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* === Release 2.91.6 ===

2007-07-03  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-pixmap.c (sapwood_pixmap_render_rects): Rename to
	sapwood_pixmap_render_rects_internal.
	* src/sapwood-pixmap.h (sapwood_pixmap_render_rects): Add width and
	height parameters in order to do downscaling.
	* src/sapwood-pixmap.c (sapwood_pixmap_render_rects): When rendering
	to a target smaller than the pixmap, paint first at least as big as
	the pixmaps and scale down to target size using cairo.
	* configure.in: bump gtk+ dependency to 2.8 due to cairo

2007-07-03  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-render.c (theme_pixbuf_render): Refactor painting of
	centered pixmaps using sapwood_pixmap_render_rects()
	* src/sapwood-pixmap.h (sapwood_pixmap_render)
	* src/sapwood-pixmap.c (sapwood_pixmap_render, get_scratch_gc): Remove
	as obsolete.

2007-07-03  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-render.c (theme_pixbuf_render): When clamping the mask
	to clip mask, do not change the area to paint.

2007-06-26  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-render.c (theme_pixbuf_render): Remove unused variables.

2007-06-08  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.91.5 ===

2007-06-08  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (maybe_check_cursor_position): Remove special